--- a/src/index.css
+++ b/src/index.css
@@ -1,68 +1,133 @@
-:root {
+*{
+  box-sizing: border-box;
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
 body {
+  background-image: url('assets/art-background.jpg');
+  color: #F0F0F0;
   margin: 0;
-  display: flex;
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
 }
 
+.container{
+  max-width: 1300px;
+  width: 100%;
+  margin: auto;
+  padding: 0px 20px;
+}
+
+section {
+  min-height: 50vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
+  text-align: center;
+  margin-bottom: 40px;
 }
 
-button {
+.cards {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 20px;
+  align-items: center;
+}
+
+.card {
+  /* flex: 0 0 calc(25% - 20px);
+  max-width: calc(25% - 20px); */
+  flex: 0 0 calc(33.33% - 40px);
+  max-width: calc(33.33% - 40px);
+  /* flex: 0 0 calc(33.33% - 20px);
+  max-width: calc(33.33% - 20px); */
+  width: 100%;
+  background: #D2B48C;
+  border-radius: 10px;
+  padding: 20px;
+  margin-bottom: 20px;
+  transition: .3s;
+  border: 2px solid transparent;
+}
+
+.card:hover{
+  border-color: #4C12A7;
+}
+
+.card img {
+  max-width: 100%;
+  height: auto; 
+  display: block; 
+  margin: 0 auto;
+}
+
+a {
+  font-weight: 500;
+  text-decoration: inherit;
+}
+
+.btn-1 {
   border-radius: 8px;
-  border: 1px solid transparent;
+  border: 1px solid #4C12A7;
+  margin-top: 20px;
   padding: 0.6em 1.2em;
+  display: inline-block;
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  color: #fff;
+  background-color: #4C12A7;
   cursor: pointer;
   transition: border-color 0.25s;
 }
-button:hover {
-  border-color: #646cff;
+
+.btn-1:hover {
+  background-color: #fff;
+  color: #4C12A7;
+  border-color: #4C12A7;
 }
-button:focus,
-button:focus-visible {
+
+.btn-2 {
+  border-radius: 8px;
+  border: 1px solid #F61865;
+  margin-top: 20px;
+  padding: 0.6em 1.2em;
+  display: inline-block;
+  font-size: 1em;
+  font-weight: 500;
+  font-family: inherit;
+  color: #fff;
+  background-color: #F61865;
+  cursor: pointer;
+  transition: border-color 0.25s;
+}
+
+.btn-2:hover {
+  background-color: #fff;
+  color: #F61865;
+  border-color: #F61865;
+}
+
+.btn-1:focus,
+.btn-1:focus-visible, 
+.btn-2:focus,
+.btn-2:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
+@media (max-width: 600px){
+  .card {
+    flex: 0 0 100%;
+    max-width: 100%;
   }
 }
