--- a/src/index.css
+++ b/src/index.css
@@ -33,7 +33,14 @@ h1 {
   font-size: 3.2em;
   line-height: 1.1;
   text-align: center;
-  margin-bottom: 40px;
+  margin-bottom: 10px;
+}
+
+h2 {
+  font-size: 1.6em;
+  line-height: 1.1;
+  text-align: center;
+  margin-bottom: 70px;
 }
 
 .cards {
